Final Updates to UGDG (#215)
* Final Updates to UGDG

docs: fix @Wingedevil link to PPP in About Us
docs: Added Manual Testing Appendix to DG
docs: Updated Ui image to reflect latest build
docs: Standardised image sizes in UG
small fix: made label focus untraversable in CommandBox

--- a/docs/AboutUs.adoc
+++ b/docs/AboutUs.adoc
@@ -38,7 +38,7 @@ Responsibilities: Documentation, Concept Artist, in charge of `UI` component
 
 === Jerrold Tan
 image::wingedevil.png[width="150", align="left"]
-{empty}[http://github.com/Wingedevil[github]] [<<jerroldtan#, portfolio>>]
+{empty}[http://github.com/Wingedevil[github]] [<<wingedevil#, portfolio>>]
 
 Role: Developer +
 Responsibilities: Git Expert, In charge of `Alias` Component
